--- a/html/news-detail.html
+++ b/html/news-detail.html
@@ -137,11 +137,13 @@
 					{% _comments.forEach(function(item){ %}
 						{% if(!item.text || item.text.length == 0) return; %}
 					<li>
-						{% if(item.avatarUrl) {%}
-						<img class="avatar" src="{%=item.avatarUrl%}" />
-						{% } else { %}
-						<img class="avatar" src="../images/icon-default-avatar.png" />
-						{% } %}
+						<a class="native-call" href="javascript:;" data-native="news.commUser" data-param1="{%=item.cid%}">
+							{% if(item.avatarUrl) {%}
+							<img class="avatar" src="{%=item.avatarUrl%}" />
+							{% } else { %}
+							<img class="avatar" src="../images/icon-default-avatar.png" />
+							{% } %}
+						</a>
 						<div class="info-text">
 							<div class="info">
 								<a class="thumbup native-call" href="javascript:;" data-native="news.likeThisComment" data-param1="{%=item.cid%}">
