--- a/html/news-detail-nodata.html
+++ b/html/news-detail-nodata.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
 	<meta charset="utf-8">
-	<title>新闻专题详情页</title>
+	<title>新闻详情页</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 	<link href="../css/common.css" type="text/css" rel="stylesheet"/>
 	<link href="../css/newslist.css" type="text/css" rel="stylesheet"/>
