--- a/testOutput/html/news-detail.html
+++ b/testOutput/html/news-detail.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang="zh-CN"><head><meta charset="utf-8"><title>新闻专题详情页</title><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1"><link href="../css/common.css" type="text/css" rel="stylesheet"><link href="../css/newslist.css" type="text/css" rel="stylesheet"><style type="text/css"></style><script type="text/javascript" src="../js/libs/zepto.js"></script><script type="text/javascript" src="../js/libs/fastclick.js"></script><script type="text/javascript" src="../js/libs/touch.js"></script><script type="text/javascript" src="../js/utils.js"></script><script type="text/javascript" src="../js/libs/ejs.js"></script><script id="grayBar-tmpl" type="text/html"><div class="grayBar">
+<!DOCTYPE html><html lang="zh-CN"><head><meta charset="utf-8"><title>新闻详情页</title><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1"><link href="../css/common.css" type="text/css" rel="stylesheet"><link href="../css/newslist.css" type="text/css" rel="stylesheet"><style type="text/css"></style><script type="text/javascript" src="../js/libs/zepto.js"></script><script type="text/javascript" src="../js/libs/fastclick.js"></script><script type="text/javascript" src="../js/libs/touch.js"></script><script type="text/javascript" src="../js/utils.js"></script><script type="text/javascript" src="../js/libs/ejs.js"></script><script id="grayBar-tmpl" type="text/html"><div class="grayBar">
 			{%tagData.forEach(function(item){%}
 				<span class="grayBar-tag">{%=item.name%}</span>
 			{%})%}
@@ -155,7 +155,7 @@
 				data-native="news.showComments"
 				href="javascript:;">{%=more%}</a>
 			{% } %}
-		</section></script></head><body><div class="wrapper"></div><script type="text/javascript" src="../js/nativeApi.js"></script><script type="text/javascript" src="../js/contentRender.js"></script><script type="text/javascript" src="../js/data/detail.js"></script><script>$(function(){
+		</section></script></head><body><div class="wrapper"></div><script type="text/javascript" src="../js/nativeApi.js"></script><script type="text/javascript" src="../js/contentRender.js"></script><script deletecur type="text/javascript" src="../js/data/detail.js"></script><script deletecur>$(function(){
 			var cont = dataDetailNews.data;
 			var comm = commData.data;
 			$ContentRender.renderGrayBar(cont);
