--- a/testOutput/html/news-detail.html
+++ b/testOutput/html/news-detail.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-	<meta charset="utf-8">
-	<title>新闻详情页</title>
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-	<link href="../css/common.css" type="text/css" rel="stylesheet"/>
-	<link href="../css/newslist.css" type="text/css" rel="stylesheet"/>
-	<style type="text/css"></style>
-	<script type="text/javascript" src="../js/libs/zepto.js"></script>
-
-	<script type="text/javascript" src="../js/libs/fastclick.js"></script>
-	<script type="text/javascript" src="../js/libs/fx.js"></script>
-	<script type="text/javascript" src="../js/libs/slidefx.js"></script>
-
-	<script type="text/javascript" src="../js/libs/touch.js"></script>
-	<script type="text/javascript" src="../js/libs/selector.js"></script>
-
-	<script type="text/javascript" src="../js/utils.js"></script>
-	<script type="text/javascript" src="../js/libs/ejs.js"></script>
-	<!--wapStart-->
-	<script  wap type="text/javascript" src="../js/libs/rng.js"></script>
-	<script wap type="text/javascript" src="../js/libs/md5.js"></script>
-	<!--wapEnd-->
-	<script id="grayBar-tmpl" type="text/html">
-		<div class="grayBar">
+<!DOCTYPE html><html lang="zh-CN"><head><meta charset="utf-8"><title>新闻详情页</title><meta name="viewport" content="width=device-width,user-scalable=no,initial-scale=1"><link href="../css/common.css" type="text/css" rel="stylesheet"><link href="../css/newslist.css" type="text/css" rel="stylesheet"><style type="text/css"></style><script type="text/javascript" src="../js/libs/zepto.js"></script><script type="text/javascript" src="../js/libs/fastclick.js"></script><script type="text/javascript" src="../js/libs/fx.js"></script><script type="text/javascript" src="../js/libs/slidefx.js"></script><script type="text/javascript" src="../js/libs/touch.js"></script><script type="text/javascript" src="../js/libs/selector.js"></script><script type="text/javascript" src="../js/utils.js"></script><script type="text/javascript" src="../js/libs/ejs.js"></script><script wap type="text/javascript" src="../js/libs/rng.js"></script><script wap type="text/javascript" src="../js/libs/md5.js"></script><script id="grayBar-tmpl" type="text/html"><div class="grayBar">
 			{%tagData.forEach(function(item){%}
 				<span class="grayBar-tag">{%=item.name%}</span>
 			{%})%}
@@ -31,11 +6,7 @@
 			{%if(transmit_num){%}
 			<a class="grayBar-rt native-call" data-native="news.recommend" href="javascript:;"><span>已被{%=transmit_num%}个自频道转推</span><span class="banner-arr-rt"></span></a>
 			{%}%}
-		</div>
-	</script>
-	
-	<script id="article-tmpl" type="text/html">
-		<section class="article part" data-name="正文">
+		</div></script><script id="article-tmpl" type="text/html"><section class="article part" data-name="正文">
 			{% if(typeof title != 'undefined'){ %}
 				<h1>{%=title%}</h1>
 			{% } %}
@@ -102,12 +73,7 @@
 				{% } %}
 			{% }); -%}
 
-		</section>
-	</script>
-
-	<!-- 图集 -->
-	<script id="mod-gallery-tmpl" type="text/html">
-		<div class="gallery mod">
+		</section></script><script id="mod-gallery-tmpl" type="text/html"><div class="gallery mod">
 			{% items.forEach(function(item){ %}
 			<div class="gallery-wrap">
 				<div class="cont gallery relative" data-itemperpage="{%=item.itemPerPage%}" data-trans-url="{%=item.transUrl%}" data-allqimg="{%=item.allqimg%}">
@@ -137,12 +103,7 @@
 				{% } %}
 			</div>
 			{% }); %}
-		</div>
-	</script>
-
-	<!-- 视频 -->
-	<script id="mod-video-tmpl" type="text/html">
-		<div class="video mod">
+		</div></script><script id="mod-video-tmpl" type="text/html"><div class="video mod">
 			{% items.forEach(function(item){ %}
 				<div class="photo" width="100%">
 					<a href="javascript:;"
@@ -160,12 +121,7 @@
 				{% } %}
 
 			{% }); %}
-		</div>
-	</script>
-
-	<!-- 相关阅读 -->
-	<script id="recommend-articles-tmpl" type="text/html">
-		<section class="recommend-articles part" data-name="推荐" >
+		</div></script><script id="recommend-articles-tmpl" type="text/html"><section class="recommend-articles part" data-name="推荐" >
 
 			<h2 class="title">相关阅读</h2>
 			<ul class="articles-list">
@@ -194,11 +150,7 @@
 				
 				{% }); %}
 			</ul>
-		</section>
-	</script>
-
-	<script id="hot-articles-tmpl" type="text/html">
-		<section class="hot-articles part" data-name="热门推荐"%}>
+		</section></script><script id="hot-articles-tmpl" type="text/html"><section class="hot-articles part" data-name="热门推荐"%}>
 			<h2 class="title">热门推荐</h2>
 			<ul class="articles-list">
 				{% hotNewsList.forEach(function(item,i){ %}
@@ -221,10 +173,7 @@
 					</li>
 				{% }); %}
 			</ul>
-		</section>
-	</script>
-	<script id="share-buttons-tmpl" type="text/html" >
-		<section class="share-buttons-wrap part" data-name="分享模块">
+		</section></script><script id="share-buttons-tmpl" type="text/html"><section class="share-buttons-wrap part" data-name="分享模块">
 			<div class="share-buttons">
 				<h2 class="title">分享</h2>
 				<ul>
@@ -248,12 +197,7 @@
 					</li>
 					
 				</ul>
-			</div>
-
-	</script>
-
-	<script id="comments-tmpl" type="text/html" >
-		<section class="comments part {% if(typeof more != 'undefined' && !window.$wap) { %} has-more {% } %}" data-name="评论">
+			</div></script><script id="comments-tmpl" type="text/html"><section class="comments part {% if(typeof more != 'undefined' && !window.$wap) { %} has-more {% } %}" data-name="评论">
 			{% if(typeof title != 'undefined'){ %}
 			<h2 class="title">{%=title%}</h2>
 			{% } else { %}
@@ -311,21 +255,7 @@
 				data-native="news.showComments"
 				href="javascript:;">{%=more%}</a>
 			{% } %}
-		</section>
-	</script>
-</head>
-<body>
-	<div class="wrapper">
-		<div id="sx-graybar"></div>
-		<div id="sx-article"></div>
-		<div id="sx-recommond"></div>
-		<div id="sx-hot"></div>
-		<div id="sx-comments"></div>
-	</div>
-	<!--wapStart-->
-	<div class="pop"></div>
-	<style type="text/css">
-		.pop-fixed{
+		</section></script></head><body><div class="wrapper"><div id="sx-graybar"></div><div id="sx-article"></div><div id="sx-recommond"></div><div id="sx-hot"></div><div id="sx-comments"></div></div><div class="pop"></div><style type="text/css">.pop-fixed{
 			position: fixed;
 			width: 100%;
 			height: 100%;
@@ -359,28 +289,7 @@
 			right: 15px;
 			top: 5px
 
-		}
-	</style>
-	<div wap class="sx-download-bar">
-    	<a href="#" class="sx-btn-download">下载</a>
-    </div>
-    <!--wapEnd-->
-
-	<script type="text/javascript" src="../js/nativeApi.js"></script>
-	<script type="text/javascript" src="../js/contentRender.js"></script>
-
-	<!--wapStart-->
-	<script type="text/javascript" src="../js/waponly.js"></script>
-	<!--wapEnd-->
-
-	<!--iosStart-->
-	<script type="text/javascript" src="../js/iosonly.js"></script>
-	<!--iosEnd-->
-
-	<!--wapStart-->
-	<script deletecur type="text/javascript" src="../js/data/detail-n.js"></script>
-	<script deletecur>
-		$(function(){
+		}</style><div wap class="sx-download-bar"><a href="#" class="sx-btn-download">下载</a></div><script type="text/javascript" src="../js/nativeApi.js"></script><script type="text/javascript" src="../js/contentRender.js"></script><script type="text/javascript" src="../js/waponly.js"></script><script type="text/javascript" src="../js/iosonly.js"></script><script deletecur type="text/javascript" src="../js/data/detail-n.js"></script><script deletecur>$(function(){
 			window.$wap = true;
 			var cont = dataDetailNews.data;
 			var comm = commData.data;
@@ -409,10 +318,4 @@
 					console.log(data);
 				}
 			})*/
-		});
-	</script>
-	<!--wapEnd-->
-
-
-</body>
-</html>
+		});</script></body></html>
