--- a/html/gallary-detail.html
+++ b/html/gallary-detail.html
@@ -5,10 +5,10 @@
     <title>图集新闻详情页</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-    <link wap href="../css/photoswipe.css?v=669367" type="text/css" rel="stylesheet">
-    <script wap type="text/javascript" src="../js/libs/zepto.js?v=46566d"></script>
-    <script wap type="text/javascript" src="../js/libs/photoswipe.js?v=bb2c53"></script>
-    <script wap type="text/javascript" src="../js/utils.js?v=364a4d"></script>
+    <link wap href="../css/photoswipe.css" type="text/css" rel="stylesheet">
+    <script wap type="text/javascript" src="../js/libs/zepto.js"></script>
+    <script wap type="text/javascript" src="../js/wap/photoswipe.js"></script>
+    <script wap type="text/javascript" src="../js/utils.js"></script>
     <style>html,body{margin:0;padding:0;border:0;height:100%}body{font-family:'STHeiti','Microsoft Yahei', sans-serif;line-height:1.5;font-size:0;background:#000;padding:0;color:#fff;position:relative;word-wrap:break-word;overflow:hidden}body:before{content:'';display:inline-block;height:100%;width:0;vertical-align:middle}body .msg-box{display:inline-block;width:100%;font-size:16px;vertical-align:middle;text-align:center}img{border:0;max-width:100%}a{text-decoration:none;-webkit-tap-highlight-color:transparent}.pswp{font-size:16px}
     	.sx-download-bar{
     		height: 40px;
@@ -79,13 +79,11 @@
     	<a href="#" class="sx-btn-download">下载</a>
     </div>
 
-	<script wap type="text/javascript" src="../js/gallery.js"></script>
+	<script wap type="text/javascript" src="../js/wap/gallery.js"></script>
 	<script type="text/javascript" src="../js/data/detail-n.js"></script>
     <script wap>
     	console.log(galleryData)
         $ContentRender.renderArticle(galleryData.data);
     </script>
-    <script wap src="http://s0.qhimg.com/monitor/;monitor/0ddb3eeb.js"></script>
-    <!--<script wap>monitor.setProject("360_kandian").setUrl("http://h5.kandian.360.cn/kandian/index.h5.detail.tuji.html").getTrack();</script>-->
 </body>
 </html>
