--- a/html/news-detail.html
+++ b/html/news-detail.html
@@ -5,7 +5,6 @@
 	<title>新闻详情页</title>
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
 	<link href="../css/common.css" type="text/css" rel="stylesheet"/>
-	<link href="../css/newslist.css" type="text/css" rel="stylesheet"/>
 	<style type="text/css"></style>
 	<script type="text/javascript" src="../js/libs/zepto.js"></script>
 
@@ -150,7 +149,7 @@
 						data-native="video.play" 
 						data-param1="{%=item.url%}">
 						<img class="snapshot lazy" data-src="{%=item.imgurl%}" width="100%" height=""/>
-						<img class="play" src="../images/icon-video-play.png" />
+						<span class="play" ></span>
 					</a>
 				</div>
 
